on initialization of label edit, the horizontal scroll is moved correctly to the end of edited label

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ a:hover {
 
 .show {display: block;}
 
-.labelText { white-space: pre-wrap; }
+.labelText { white-space: pre; }
 
 .labelText:focus {outline:0;}
 
